--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-loading-overlay": "5.0",
     "vue-router": "^4.0.3",
+    "vuejs-loading-plugin": "^1.0.51",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
