--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "vue": "^3.2.13",
     "vue-loading-overlay": "5.0",
     "vue-router": "^4.0.3",
+    "vue-sweetalert2": "^5.0.2",
     "vuejs-loading-plugin": "^1.0.51",
     "vuex": "^4.0.0"
   },
